--- a/.htaccess
+++ b/.htaccess
@@ -25,7 +25,7 @@
 
     Header set X-XSS-Protection '1; mode=block;'
 
-    #Header set X-Frame-Options 'SAMEORIGIN'
+    Header set X-Frame-Options 'SAMEORIGIN'
 
     RewriteEngine On
 
