--- a/.htaccess
+++ b/.htaccess
@@ -8,12 +8,12 @@
         Header unset X-Content-Type-Options
         Header unset X-XSS-Protection
         Header unset X-Frame-Options
+        Header unset X-Powered-By
         Header unset Strict-Transport-Security
         Header set Cache-Control "no-cache, no-store, must-revalidate"
         Header set Pragma "no-cache"
         Header set Expires 0
     </IfModule>
-
 
     Header set X-Content-Type-Options nosniff
 
